# ECS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Component/: Component.cpp  Component.hpp  MeshComponent.cpp  MeshComponent.hpp  ModelComponent.hpp  TriangleComponent.cpp  structs.hpp
Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
Game/Assets/: Bishop.3ds  Bishop.mtl  modell_chessBoard.mtl
Game/Environment/: Camera.cpp
System/: ModelSystem.cpp  ModelSystem.hpp  RenderMeshSystem.cpp  RenderMeshSystem.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
helpers/: globals.hpp
shader/: fragment.frag  vertex.vert
